# RainClassroom-Assistant

./: README.md  RainClassroom-Assistant.py  rain.nsi  resources.py  ui.py  ui.spec  utils.py
pyinstaller-4.2/: PKG-INFO  setup.cfg
pyinstaller-4.2/pyinstaller.egg-info/: SOURCES.txt  requires.txt
setup制作/installTools/: 文档说名.doc
setup制作/installTools/示例/niuniu/: app.7z  niuniu_demo.nsi  ui_niuniu_h.nsh
setup制作/installTools/示例/songliwu/: app.7z  license.txt  songliwu_demo.nsi  ui_songliwu.nsh
ui.build/: __constants.c  __constants.const  __helpers.c  module.__main__.c  module.__main__.const
vniseditba/: Setup.nsi  VNISEdit.ini
vniseditba/Config/: CmpParsing.ini  HelpIndex.ini  Syntax.ini
vniseditba/Lang/: Chinese_Simplified.lng
yuketangend/: manage.py  requirements.txt
yuketangend/App/: __init__.py  config.py  ext.py  models.py
yuketangend/App/utils/: __init__.py  down.py  excel.py
yuketangend/App/views/: __init__.py  answerApi.py
