[metadata]
name = pyinstaller
version = attr: PyInstaller.__version__
url = http://www.pyinstaller.org/
description = PyInstaller bundles a Python application and all its dependencies into a single package.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Hartmut Goebel, Giovanni Bajo, David Vierra, David Cortesi, Martin Zibricky
keywords = 
	packaging, app, apps, bundle, convert, standalone, executable
	pyinstaller, cxfreeze, freeze, py2exe, py2app, bbfreeze
license = GPLv2-or-later with a special exception which allows to use PyInstaller to build and distribute non-free programs (including commercial ones)
license_file = COPYING.txt
classifiers = 
	Development Status :: 6 - Mature
	Environment :: Console
	Intended Audience :: Developers
	Intended Audience :: Other Audience
	Intended Audience :: System Administrators
	License :: OSI Approved :: GNU General Public License v2 (GPLv2)
	Natural Language :: English
	Operating System :: MacOS :: MacOS X
	Operating System :: Microsoft :: Windows
	Operating System :: POSIX
	Operating System :: POSIX :: AIX
	Operating System :: POSIX :: BSD
	Operating System :: POSIX :: Linux
	Operating System :: POSIX :: SunOS/Solaris
	Programming Language :: C
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Software Development
	Topic :: Software Development :: Build Tools
	Topic :: Software Development :: Interpreters
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: System :: Installation/Setup
	Topic :: System :: Software Distribution
	Topic :: Utilities

[options]
zip_safe = False
packages = PyInstaller
include_package_data = True
python_requires = >=3.5
install_requires = 
	setuptools
	altgraph
	pefile >= 2017.8.1 ; sys_platform == 'win32'
	pywin32-ctypes >= 0.2.0 ; sys_platform == 'win32'
	macholib >= 1.8 ; sys_platform == 'darwin'
	pyinstaller-hooks-contrib >= 2020.6
	importlib-metadata ; python_version < '3.8'

[options.extras_require]
hook_testing = 
	pytest >= 2.7.3
	execnet >= 1.5.0
	psutil
encryption = 
	tinyaes>=1.0.0

[options.package_data]
pyinstaller = bootloader/*/*
pyinstaller.hooks = rthooks.dat
pyinstaller.utils = pytest.ini

[options.entry_points]
console_scripts = 
	pyinstaller = PyInstaller.__main__:run
	pyi-archive_viewer = PyInstaller.utils.cliutils.archive_viewer:run
	pyi-bindepend = PyInstaller.utils.cliutils.bindepend:run
	pyi-grab_version = PyInstaller.utils.cliutils.grab_version:run
	pyi-makespec = PyInstaller.utils.cliutils.makespec:run
	pyi-set_version = PyInstaller.utils.cliutils.set_version:run

[sdist]
formats = gztar

[zest.releaser]
python-file-with-version = PyInstaller/__init__.py
releaser.before_upload = PyInstaller.utils.release.sign_source_distribution
push-changes = no
tag-format = v{version}
tag-message = PyInstaller {version}
tag-signing = yes

[catchlog]
log_level = DEBUG

[tool:pytest]
timeout_method = thread
python_files = "tests/functional/test_*.py" "tests/unit/test_*.py"
norecursedirs = 
	tests/functional/data
	tests/functional/logs
	tests/functional/modules
	tests/functional/scripts
	tests/functional/specs
	tests/scripts
	tests/unit/Tree_files
	tests/unit/hookutils_files
	tests/unit/test_modulegraph/testdata
	tests/unit/test_modulegraph/testpkg-*
filterwarnings = 
	ignore:Please use assertEqual instead.:DeprecationWarning
	ignore:Use zipio.listdir instead of os_listdir:DeprecationWarning:
addopts = "-v" "-rsxXfE" "--doctest-glob=" "--force-flaky" "--no-success-flaky-report"
markers = 
	darwin: only run on macOS
	linux: only runs on GNU/Linux
	win32: only runs on Windows

[flake8]
exclude = 
	.git,
	doc/_build,
	build,
	dist,
	bootloader
show-source = True
ignore = E265

[egg_info]
tag_build = 
tag_date = 0

